# electrodynamics-simulations

./: .gitignore  CMakeLists.txt  README.md  analytic_trajectories_direct_integration.py  analytic_trajectories_taylor_series.py  direct_integration.py  laguerre_gauss_beam_momentum_transfer.py  plot_beams.py  plot_results.py  pyproject.toml
c++/: CMakeLists.txt  main.c++  plot_results.py
c++/src/: angular_momentum.h++  beam.c++  beam.h++  constants.h++  integrate.c++  integrate.h++  main.c++  npy_io.c++  polarization.h++  types.h++  vector.c++  vector.h++
codes/c++/: CMakeLists.txt  plot_results.py
codes/c++/src/: angular_momentum.c++  beam.c++  beam.h++  common.h++  constants.h++  detector.c++  detector.h++  initial_conditions.c++  initial_conditions.h++  integrate.c++  integrate.h++  main.c++  npy_io.c++  npy_io.h++  polarization.c++  trajectory.c++  trajectory.h++  vector.c++  vector.h++
codes/csharp/: .gitignore  ElectrodynamicsSimulations.csproj
codes/fortran/: plot_results.py
codes/fortran/src/: beam.f90  constants.f90  integrate.f90  main.f90
codes/haskell/: plot_results.py
codes/haskell/src/ElectrodynamicsSimulations/: InitialConditions.hs  Integrate.hs
codes/julia/: Manifest.toml
codes/python/: analytic_trajectories_direct_integration.py  plot_beams_old.py  relativistic_trajectory_integration.py
codes/python/electrodynamics/: initial_conditions.py
codes/rust/: Cargo.toml
codes/rust/src/: angular_momentum.rs  constants.rs  main.rs  types.rs
csharp/: ElectrodynamicsSimulations.sln  Program.cs
electrodynamics/: beams.py  integrator.py  iterate.py  plotting.py  tensor.py  typing.py  utils.py
fortran/: .editorconfig  .gitignore  CMakeLists.txt  angular_momentum.f90  constants.f90  initial_conditions_generation.f90  integrate.f90  laguerre_gauss_beam_angular_momentum_transfer.f90  main.f90  plot_results.py  vector.f90
fortran/src/: angular_momentum.f90  beam.f90  constants.f90  detector.f90  initial_conditions_generation.f90  integrate.f90  main.f90  numpy.f90  types.f90  vector.f90
haskell/: electrodynamics-simulations.cabal  hie.yaml  package.yaml  stack.yaml
haskell/app/: Main.hs
haskell/src/: Constants.hs  InitialConditions.hs  Lib.hs  NPY.hs  Types.hs
haskell/src/ElectrodynamicsSimulations/: AngularMomenta.hs  Constants.hs  InitialConditions.hs  Integrate.hs  NPY.hs  Types.hs
julia/: Project.toml
julia/src/: ElectrodynamicsSimulations.jl
python/: cuda_integrator.py  laguerre_gauss_beam_momentum_transfer.py
python/electrodynamics/: beams.py
rust/: Cargo.toml  plot_results.py
rust/src/: beam.rs  constants.rs  initial_conditions.rs  integrate.rs  main.rs  numpy.rs
scripts/: doppler_shift_study.py  single_electron_trajectory.py
src/electrodynamics/: angular_momentum.py  beams.py  constants.py  detector.py  fields.py  initial_conditions.py  integrate.py  iterate.py  jax.py  plotting.py  polarization.py  pulse.py  tensor.py  trajectories.py
