[project]
name = "electrodynamics-simulations"
version = "0.1.0"
description = "Numerical solutions of the classical electrodynamics equations."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numba>=0.65.1",
    "numpy>=2.4.1",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
gpu = ["cupy>=13.6.0", "pykeops>=2.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/electrodynamics/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/electrodynamics"]
