[package]
name = "electrodynamics-simulations"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.34.2"
npyz = "0.9.1"
num = "0.4.3"
num_cpus = "1.17.0"
rand = "0.10.1"

[profile.dev]
opt-level = 3
codegen-units = 1
lto = "fat"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
debug = true
